--- a/ToDoList.html
+++ b/ToDoList.html
@@ -11,10 +11,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>To-Do List</title>
+    <style>
+        .delete-item{
+            float: right;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="container" style="margin-top:20px;">
+    <div class="container" style="margin-top:20px; width: 700px; overflow: hidden;">
         <div class="card row">
             <div class="card-header">To-Do List</div>
             <div class="card-body">
@@ -24,7 +29,9 @@
                             <input class="form-control" type="text" name="todo" id="todo" placeholder="Enter a To-Do">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-danger">Add New To-Do</button>
+                    <div id="btn-msg-group" class="d-flex">
+                        <button type="submit" class="btn btn-danger">Add New To-Do</button>
+                    </div>                   
                 </form>
             </div>
             <div class="card-body">
@@ -37,12 +44,7 @@
                 </div>
                 <hr>
                 <ul class="list-group">
-                    <!--<li class="list-group-item d-flex justify-content-between">
-                        Todo 1
-                        <a href="#" class="delete-item">
-                            <i class="fa fa-remove"></i>
-                        </a>
-                    </li> -->
+                    
                 </ul>
                 <hr>
                 <a id="clear-todos" class="btn btn-dark" href="#">Clear All</a>
